--- a/Client/index.html
+++ b/Client/index.html
@@ -41,8 +41,8 @@
         <div class="row" style="flex: 1 1 auto">
             <div class="column subcol center">
                 <div class="centralise" >
-                    <input id='ytURL' required type="text">
                     <label>URL of Youtube Channel, Playlist or Video</label>
+                    <input id='ytURL' required type="text" placeholder="https://www.youtube.com/watch?v=pok8H_KF1FA">
                 </div>
                 <button id="searchbutton">Go</button>
                 <span class="outputLink">Playlist Link: <a id="playlistLink" href="#" onclick="return false" target="_blank">...</a></span>
